--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "counter"
+name = "randomizer"
 version = "0.1.0"
-authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
+authors = ["valecrafter"]
 edition = "2024"
-publish = false
+publish = true
 
 [dependencies]
 iced = { version = "0.13.1", features = ["tokio"] }
 rand = "0.9.2"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 
-
-
+[package.metadata.windows]
+subsystem = "windows"
